[package]
name = "pallet-rmrk-equip"
version = "0.0.1"
description = "RMRK Equip"
authors = ["RMRK Team"]
homepage = ""
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/rmrk-team/rmrk-substrate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-std = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
frame-system = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
frame-benchmarking = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", optional = true, branch = "peaq-polkadot-v0.9.38" }

pallet-uniques = { default-features = false, version = "4.0.0-dev", git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
pallet-balances = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }

# Local Dependencies
pallet-rmrk-core = { default-features = false, version = "0.0.1", path = "../rmrk-core" }
rmrk-traits = { default-features = false, version = "0.0.1", path = "../../traits" }


[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-io = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-std = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }

[features]
default = ["std"]
std = [
	"pallet-uniques/std",
	"serde/std",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-rmrk-core/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-rmrk-core/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
