[package]
name = "pallet-template"
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/rmrk-team/rmrk-substrate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
frame-system = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
frame-benchmarking = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", optional = true, branch = "peaq-polkadot-v0.9.38" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-io = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/substrate.git", branch = "peaq-polkadot-v0.9.38" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
