[package]
name = "pallet-xyk-rpc-runtime-api"
version = "1.0.0"
authors = [""]
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/basilisk-node"
edition = "2018"

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]

# [build-dependencies]
# substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

[features]
default = ["std"]
std = [
    "sp-api/std",
]